Quality o life (#37)
* quality o life

* cleanup